SVCC-2297 fix contrast of several elements of the UI

--- a/packages/quantic/force-app/main/default/lwc/exampleSearch/exampleSearch.css
+++ b/packages/quantic/force-app/main/default/lwc/exampleSearch/exampleSearch.css
@@ -1,3 +1,16 @@
+/* 
+ * Styling hooks are not supported by the LWC Local Development Server.
+ * You can safely comment those out in order to run the code in the Local Dev Server, these are for a11y purpose only.
+ * Issue opened to Salesforce: https://github.com/forcedotcom/salesforcedx-vscode/issues/4493
+ */
+:host {
+  --slds-c-checkbox-color-border: var(--lwc-colorTextIconDefault, #747474);
+  --slds-c-checkbox-color-border-checked: var(--lwc-colorTextIconDefault, #747474);
+  --slds-c-input-color-border: var(--lwc-colorTextIconDefault, #747474);
+  --slds-c-button-neutral-color-border: var(--lwc-colorTextIconDefault, #747474);
+}
+
+
 .search__container {
   position: relative;
   background: #fff;
